# LLM_Robot_ROS

./: .gitignore  README.md
AppInterfaceAnalysis/: CMakeLists.txt  package.xml
AppInterfaceAnalysis/config/: config.yaml
AppInterfaceAnalysis/launch/: AppAnalysis.launch
AppInterfaceAnalysis/src/: main_AppAnalysis.py  main_AppAnalysis_test.cpp  main_AppInterface.cpp
AppInterfaceAnalysis/srv/: APP_LLM.srv
XarmGrip/: CMakeLists.txt  package.xml
XarmGrip/ParmControl/: ConfirmYaml.h
XarmGrip/config/: ConfirmPoints.yaml  ConfirmYaml.h.in  config.yaml  test.yaml
XarmGrip/launch/: run_env.launch  run_gdrnet.launch  run_xarm.launch
XarmGrip/src/: XarmGrip_Controller.cpp  XarmGrip_Controller.h  common.h  main_XarmGrip.cpp
commonType/: CMakeLists.txt  package.xml
commonType/msg/: RobotControl.msg  TargetReco.msg  UnityImage.msg  VehicleCurrentState.msg  XarmControlCommond.msg  XarmGetTarget.msg  XarmGripCurrentState.msg  XarmStatus.msg  (+1 more)
target_recognition/: CMakeLists.txt  package.xml  py.h.in
target_recognition/core/algorithm2/py/ICP_depend/: CMakeLists.txt  arm_pose_estimation_final.cpp  arm_pose_estimation_final.h
target_recognition/core/algorithm2/py/ICP_depend/CAD_model/: biscuit.pcd  biscuit1.pcd  biscuit2.pcd  biscuit3.pcd  cake.pcd  cake1.pcd  cake2.pcd  cake3.pcd  coke.pcd  lemon_tea.pcd  lemon_tea1.pcd  lemon_tea2.pcd  lemon_tea3.pcd  milk.pcd  milk1.pcd  milk2.pcd  milk3.pcd  mushroom_soup.pcd  tape.pcd  waffle.pcd  waffle1.pcd  waffle2.pcd  waffle3.pcd
unity_robotics_demo_msgs/: CMakeLists.txt
xarmDispatchSystem/: CMakeLists.txt  package.xml
(+87 files in other folders)
